<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        />

    <ImageView
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_height="115dp"
        android:layout_width="236dp" />

    <TextView
        android:paddingTop="10dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/colorgreen"
        android:layout_weight="0.21" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorgreen"
        >

        <Button
            android:textSize="20sp"
            android:text="@string/news"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style2"
            android:textColor="@color/colorgreen"/>

        <Button
            android:textSize="20sp"
            android:text="@string/useful_info"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style3"
            android:textColor="@color/colorgreen"/>

        <Button
            android:textSize="20sp"
            android:text="@string/settings"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style3"
            android:textColor="@color/colorgreen"/>

        <Button
            android:textSize="20sp"
            android:text="@string/connection"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:textColor="@color/colorgreen"/>
    </LinearLayout>

</LinearLayout>