<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="15dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="Hello World"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <CheckBox
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foydalanish_shartlari"
        android:layout_above="@+id/utkazib_yuborish"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </LinearLayout>

    <Button
        android:id="@+id/utkazib_yuborish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="@color/colorgreen"
        android:text="@string/utkazib_yuborish"
        android:textColor="@color/colorWhite"
        android:layout_alignParentBottom="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/royhat_utish"
        android:layout_alignParentRight="true"
        android:background="@color/colorgreen"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/white"
        />

</RelativeLayout>